<resources>
    <string name="app_name" translatable="false">Project Seeker</string>
    <string name="google_login">Continue with Google</string>
    <string name="mail_login">Continue with Email</string>
    <string name="phone_login">Continue with phone</string>
    <string name="register_new_user">Sign Up</string>
    <string name="login_with_email">Login with email</string>
    <string name="login_with_phone">Log in with phone</string>
    <string name="invalid_code">Invalid or expired code</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="too_many_requests">Phone login is not available</string>
    <string name="authentication_failed">Firebase auth failed</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="phone_number_not_found">Phone number not found</string>
    <string name="register_title">Register new user</string>
    <string name="confirm_phone_code">Confirm SMS code</string>
    <string name="resend_code">Resend SMS Code</string>
    <string name="email_not_sent">Error sending email</string>
    <string name="phone_number_not_verified">Error verifying phone</string>
    <string name="phone_verified">Phone is verified</string>
    <string name="code_sent">SMS Code Sent</string>
    <string name="profile_not_updated">Profile not updated</string>
    <string name="phone_number_not_updated">Phone number not updated</string>
    <string name="user_not_created">User not created</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="username_is_required">Full name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="sms_code_is_required">SMS Code is required</string>
    <string name="phone_alredy_registered">This phone number is already registered</string>
    <string name="email_alredy_registered">Email is already registered</string>
    <string name="home_fragment_title">Home</string>
    <string name="register_user_fragment_title">Register new user</string>
    <string name="invalid_sms_code">SMS code is incorrect</string>
    <string name="error_login">Login error</string>
    <string name="logged">Successfully logged in</string>
    <string name="log_out">Exit</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="user_fragment_title">Users</string>
    <string name="online">Online</string>
    <string name="channels_fragment_title">Chats</string>
    <string name="profile_fragment_title">My Profile</string>
    <string name="linkdin">Dev Linkedin</string>
    <string name="github">Dev Github</string>
    <string name="projects_fragment_title">Projects</string>
    <string name="channel_deleted">Channel deleted</string>
    <string name="channel_delete_error">Unable to delete channel</string>
    <string name="log_out_everywhere">Logout everywhere</string>
    <string name="chat_fragment_title">Chat</string>
    <string name="stream_login_error">Please wait 1 minute and retry login</string>
    <string name="error_get_my_profile">Error getting my profile</string>
    <string name="error_change_role">User role not changed</string>
    <string name="update_profile_client">Update Client Profile</string>
    <string name="update_profile_freelancer">Update Freelancer Profile</string>
    <string name="skill">Skill</string>
    <string name="add_skill">Add Skill</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="remenber_to_update_your_profile">Remember updating the freelancer profile after adding new skills</string>
    <string name="delete_skill">Delete skill</string>
    <string name="delete_skill_message">Do you want to delete this skill</string>
    <string name="delete">Delete</string>
    <string name="add_project">Add project</string>
    <string name="skills_label">Skills: </string>
    <string name="list_projects_fragment_title">List projects</string>
    <string name="create_project_fragment_title">Create project</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="btn_choose_date">Choose date</string>
    <string name="date_picker_title">Choose a date</string>
    <string name="error_empty_fields">Error empty fields</string>
    <string name="error_invalid_date">Invalid date error</string>
    <string name="error_create_project">Error creating project</string>
    <string name="project_created">Project Created</string>
    <string name="deadline_date">Deadline date: </string>
    <string name="status">Project status: </string>
    <string name="start_date">Start date: </string>
    <string name="budget">Project budget: </string>
    <string name="skills">Skills: </string>
    <string name="description">Project description: </string>
    <string name="title">Project title: </string>
    <string name="error_get_open_projects">Error getting open projects</string>
    <string name="app_quick_guide">To start using the app navigate through the different sections in the drawer menu, update your profile first</string>
    <string name="error_get_my_projects">Error getting my projects</string>
    <string name="error_uploading_image">Error uploading image</string>
    <string name="error_invalid_budget">Invalid budget range</string>
    <string name="offer_status">My offer status: </string>
    <string name="project_title">Title</string>
    <string name="project_client_label">Client: </string>
    <string name="project_client">Client</string>
    <string name="project_description_label">Description: </string>
    <string name="project_description">Description</string>
    <string name="project_skills_label">Skills: </string>
    <string name="project_skills">Skills</string>
    <string name="project_budget_label">Budget: </string>
    <string name="project_budget">Budget</string>
    <string name="project_deadline_label">Deadline: </string>
    <string name="project_deadline">Deadline</string>
    <string name="project_status_label">Status: </string>
    <string name="project_status">Status</string>
    <string name="project_freelancer_label">Assigned Freelancer: </string>
    <string name="project_freelancer">Assigned freelancer</string>
    <string name="project_created_date_label">Start date: </string>
    <string name="project_created_date">Start date</string>
    <string name="offers_label">Offers: </string>
    <string name="finish_project">Finish project</string>
    <string name="chat_with_client">Chat with client</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="view_project_fragment_title">Project Details</string>
    <string name="no_freelancer_selected">No freelancer assigned</string>
    <string name="offer_description">Offer: </string>
    <string name="offer_status_label">Status: </string>
    <string name="accept_offer">Accept Offer</string>
    <string name="view_profile">View profile</string>
    <string name="submit">Submit</string>
    <string name="profile_name">Name</string>
    <string name="profile_title">Title</string>
    <string name="profile_description">Description</string>
    <string name="profile_skills">Skills</string>
    <string name="profile_description_label">Description: </string>
    <string name="error_viewing_profile">The user has no profile active</string>
    <string name="close">Close</string>
    <string name="open_chat">Open chat</string>
    <string name="submit_budget">Budget (€): </string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="send_sms_code">Send SMS Code</string>
    <string name="sms_code">SMS Code</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="email_label">Email: </string>
    <string name="phone_label">Phone:</string>
    <string name="active_role_label">Active Role: </string>
    <string name="active_role">Active Role</string>
    <string name="title_profile">Profile title</string>
    <string name="availability_label">Availability: </string>
    <string name="availability">Availability</string>
    <string name="min_budget">Min Budget (€)</string>
    <string name="max_budget">Max Budget (€)</string>
    <string name="create_project">Create Project</string>
    <string name="error_opening_chat">Error opening chat</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="logout_exit_title">Logout</string>
    <string name="logout_exit_message">Are you sure you want to logout?</string>
    <string name="logout_everywhere_title">Logout everywhere</string>
    <string name="logout_everywhere_message">Are you sure you want to logout everywhere?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="change_password">Change password</string>
    <string name="send_email">Send email</string>
    <string name="email_sent">Email sent</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="email_not_verified_message">Please verify your email</string>
    <string name="resend_verification_email">Send verification email</string>
    <string name="change_password_message">Send an email to change your password</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_message">This will delete all your profiles you will need to register to use the app again</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_deleted_message">Your account have been deleted</string>
    <string name="ok">OK</string>
    <string name="show_my_open_projects">List my open projects</string>
    <string name="show_projects_where_i_have_offer">List Projects where I have made an offer</string>
    <string name="show_projects_assigned_to_me">List Projects Assigned to me</string>
    <string name="show_my_projects">List my projects</string>
    <string name="show_my_projects_in_progress">List my projects in progress</string>
    <string name="show_all_open_projects">List all open projects</string>
    <string name="show_open_projects_matching_my_skills">List open projects matching my skills</string>
    <string name="error_get_projects">Error getting projects</string>
    <string name="no_offers">There are no offers</string>
    <string name="you_need_to_register">Register first or use Google</string>
    <string name="notification_permission_title">Notifications</string>
    <string name="notification_permission_message">This app uses notifications for projects updates</string>
    <string name="notification_permission_granted">Notifications permission granted</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="default_notification_channel_id">Notifications</string>
    <string name="display_filters">Display Filters</string>
    <string name="budget_must_be_number">Budget must be a number</string>
    <string name="offer_submitted">Offer submitted</string>
    <string name="error_get_profile">Error getting profile</string>
    <string name="error_sending_offer">Error sending offer</string>
    <string name="error_accept_offer">Error acepting offer</string>
    <string name="error_finish_project">Error project not finished</string>
    <string name="full_time">Full time</string>
    <string name="part_time">Part time</string>
    <string name="unavailable">Unavailable</string>
    <string name="pending">Pending</string>
</resources>