<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav.xml"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.jorgetargz.projectseeker.framework.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerUserFragment"
            app:destination="@id/registerUserFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.jorgetargz.projectseeker.framework.home.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/registerUserFragment"
        android:name="com.jorgetargz.projectseeker.framework.register_user.RegisterUserFragment"
        android:label="@string/register_user_fragment_title"
        tools:layout="@layout/fragment_register_user" />
    <fragment
        android:id="@+id/usersFragment"
        android:name="com.jorgetargz.projectseeker.framework.users.UsersFragment"
        android:label="@string/user_fragment_title"
        tools:layout="@layout/fragment_users" >
        <action
            android:id="@+id/action_usersFragment_to_chatFragment"
            app:destination="@id/chatFragment"
            app:popUpTo="@id/usersFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/channelFragment"
        android:name="com.jorgetargz.projectseeker.framework.channel.ChannelFragment"
        android:label="@string/channels_fragment_title"
        tools:layout="@layout/fragment_channel" >
        <action
            android:id="@+id/action_channelFragment_to_chatFragment"
            app:destination="@id/chatFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_channelFragment_to_usersFragment"
            app:destination="@id/usersFragment"
            app:enterAnim="@anim/from_bottom"
            app:exitAnim="@anim/to_top"
            app:popEnterAnim="@anim/from_top"
            app:popExitAnim="@anim/to_bottom" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.jorgetargz.projectseeker.framework.chat.ChatFragment"
        android:label="@string/chat_fragment_title"
        tools:layout="@layout/fragment_chat" >
        <argument
            android:name="channelId"
            app:argType="string" />
        <action
            android:id="@+id/action_chatFragment_to_channelFragment"
            app:destination="@id/channelFragment"
            app:popUpTo="@id/chatFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <action
        android:id="@+id/action_global_channelFragment"
        app:destination="@id/channelFragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.jorgetargz.projectseeker.framework.profile.ProfileFragment"
        android:label="@string/profile_fragment_title"
        tools:layout="@layout/fragment_profile" />
    <action
        android:id="@+id/action_global_profileFragment"
        app:destination="@id/profileFragment" />
    <fragment
        android:id="@+id/listProjectsFragment"
        android:name="com.jorgetargz.projectseeker.framework.list_projects.ListProjectsFragment"
        android:label="@string/list_projects_fragment_title"
        tools:layout="@layout/fragment_list_projects" >
        <action
            android:id="@+id/action_listProjectsFragment_to_creatProjectFragment"
            app:destination="@id/createProjectFragment" />
        <action
            android:id="@+id/action_listProjectsFragment_to_viewProjectFragment"
            app:destination="@id/viewProjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/createProjectFragment"
        android:name="com.jorgetargz.projectseeker.framework.create_project.CreateProjectFragment"
        android:label="@string/create_project_fragment_title"
        tools:layout="@layout/fragment_create_project" />
    <action
        android:id="@+id/action_global_listProjectsFragment"
        app:destination="@id/listProjectsFragment" />
    <fragment
        android:id="@+id/viewProjectFragment"
        android:name="com.jorgetargz.projectseeker.framework.view_project.ViewProjectFragment"
        android:label="@string/view_project_fragment_title"
        tools:layout="@layout/fragment_view_project" >
        <argument
            android:name="projectId"
            app:argType="string" />
        <action
            android:id="@+id/action_viewProjectFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
</navigation>